# ciemiega_stpiczynska

./: README.md
lab1/: CMakeLists.txt  package.xml
lab1/launch/: launcher_lab1.launch
lab1/scripts/: turtle_controller.py
lab2/: CMakeLists.txt  package.xml
lab2/launch/: control.launch  display_dynamic.launch  display_static.launch
lab2/src/: dh_to_urdf.py
lab2/urdf/: dynamic.urdf.xacro  static.urdf.xacro  static_robot.urdf
lab2/yaml/: param.yaml
lab3/: CMakeLists.txt  dh_data.json  package.xml  rest.json  restrictions (copy).json  restrictions.json
lab3/launch/: both.launch  display_dynamic.launch  display_static.launch  noKdl.launch  withKdl.launch
lab3/src/: noKdl.py  withKdl.py
lab3/urdf/: static.urdf.xacro
lab3/yaml/: dh.json
lab4/: CMakeLists.txt  dh.json  package.xml
lab4/rviz/: display.rviz
lab4/src/: jcmd.py  jint.py  oint.py
lab4/srv/: jint_control.srv  oint_control.srv
lab4/urdf/: dynamic.urdf.xacro
lab4/yaml/: urdf.yaml
lab5/: CMakeLists.txt  package.xml
lab5/launch/: circle.launch  display_dynamic.launch  inverted_kin.launch  rectangle.launch
lab5/src/: error.py  inverted_kin.py  ocmd.py  ocmd_rect.py  oint.py  path_maker.py
